project(Launcher)
#===============================================================================
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
#===============================================================================
add_executable(${PROJECT_NAME} ${SOURCES})
#===============================================================================